cluster-config/apps/web-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: warhammer40k10thcalc-web
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: warhammer40k10thcalc.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: warhammer40k10thcalc-web-active
            port:
              number: 80
